--- a/theme/src/styles/content-elements/footer/_index.scss
+++ b/theme/src/styles/content-elements/footer/_index.scss
@@ -20,7 +20,6 @@
 // check "theme/src/styles/bootstrap/mixins/_index.scss"
 @use '../../bootstrap/mixins' as mixin;
 
-
 // =================================
 // === Footer  =====================
 // =================================
@@ -33,11 +32,6 @@
   color: var.$white;
   -webkit-font-smoothing: antialiased;
   text-transform: uppercase;
-
-  & p {
-    line-height: 30px;
-    margin-bottom: 0;
-  }
 
   & h1,
   & h2,
@@ -64,11 +58,6 @@
 
   @include mixin.media-breakpoint-down(md) {
     text-align: center;
-
-    & p {
-      line-height: 50px;
-      margin-bottom: 0;
-    }
   }
 
   &__header {
@@ -102,6 +91,16 @@
       margin-bottom: 50px;
       padding-bottom: 83px;
     }
+
+    & p {
+      line-height: 30px;
+      margin-bottom: 0;
+
+      @include mixin.media-breakpoint-down(md) {
+        line-height: 50px;
+        margin-bottom: 0;
+      }
+    }
   }
 
   // === Footer Logo===========
@@ -121,94 +120,153 @@
     &-list {
       list-style: none;
       padding-left: 0;
+    }
 
-      &-item {
-        line-height: 50px;
-      }
+    &-item {
+      line-height: 50px;
     }
   }
   // -----------------------------------------------------------------------------
   // -----------------------------------------------------------------------------
-}
 
+  // === *Footer Form ===============
+  // =================================
+  &__form-input:focus,
+  &__form-input {
+    height: 56px;
+    outline: none;
+    border: none;
+    border-radius: 0;
+    background-color: var.$grey;
+    color: var.$white;
+    box-shadow: none;
+    padding: 17px 19px;
+  }
+
+  &__form-input::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: rgba(var.$white, 0.5);
+  }
+
+  &__form-input::-moz-placeholder {
+    /* Firefox 19+ */
+    color: rgba(var.$white, 0.5);
+  }
+
+  &__form-input:-ms-input-placeholder {
+    /* IE 10+ */
+    color: rgba(var.$white, 0.5);
+  }
+
+  &__form-input:-moz-placeholder {
+    /* Firefox 18- */
+    color: rgba(var.$white, 0.5);
+  }
+
+  &__btn {
+    border: 4px solid var.$white;
+    font-size: 16px;
+    height: 61px;
+    margin-top: 34px;
+    width: 100%;
+    font-weight: var.$font-weight-bolder;
+    letter-spacing: 0.2px;
+    -webkit-font-smoothing: antialiased;
+    text-transform: uppercase;
+    background-color: var.$blacklight;
+
+    &:hover {
+      background-color: var.$gray-900;
+    }
+  }
+  // -----------------------------------------------------------------------------
+  // -----------------------------------------------------------------------------
+  // === Footer Social Links ===============
+  // =================================
+  &__social-list {
+    @include mixin.media-breakpoint-up(lg) {
+      .social-icons {
+        padding: 0;
+        text-align: right;
+        flex-direction: column;
+      }
+    }
+  }
+
+  &__social__item {
+    color: var.$white;
+    margin-left: 50px;
+
+    &:first-child {
+      margin-left: 0;
+    }
+  }
+
+  // === Footer Bottom ===============
+  // =================================
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @include mixin.media-breakpoint-down(md) {
+      flex-direction: column;
+    }
+
+    &-wrap {
+      display: flex;
+
+      @include mixin.media-breakpoint-down(md) {
+        margin-bottom: 50px;
+      }
+    }
+
+    &-links {
+      margin-bottom: 0;
+    }
+
+    &-copyright {
+      line-height: 50px;
+    }
+
+    &-link {
+      position: relative;
+      margin-left: 20px;
+
+      &:after {
+        content: "";
+        background-color: #fff;
+        width: 1px;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: -10px;
+      }
+
+      @include mixin.media-breakpoint-down(xs) {
+        margin-left: 10px;
+        margin-right: 10px;
+        &:last-child:after {
+          display: none;
+        }
+
+        &:after {
+          left: auto;
+          right: -10px;
+        }
+      }
+    }
+
+    @include mixin.media-breakpoint-up(sm) {
+      &-item {
+        display: inline-block;
+      }
+    }
+  }
+}
 
 .no-touch .footer a:hover {
   color: var.$gray-500;
-}
-
-// =================================
-// === Footer Bottom ===============
-// =================================
-.footer-bottom {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  .social-icons {
-    .social-icons__item {
-      color: var.$white;
-      margin-left: 50px;
-
-      &:first-child {
-        margin-left: 0;
-      }
-    }
-  }
-
-  @include mixin.media-breakpoint-down(lg) {
-    flex-direction: column;
-  }
-
-  @include mixin.media-breakpoint-up(lg) {
-    .social-icons {
-      padding: 0;
-      text-align: right;
-      flex-direction: column;
-    }
-  }
-}
-
-.footer-bottom__links {
-  a {
-    position: relative;
-    margin-left: 20px;
-
-    &:after {
-      content: "";
-      background-color: #fff;
-      width: 1px;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: -10px;
-    }
-
-  }
-
-  @include mixin.media-breakpoint-up(sm) {
-    & > * {
-      display: inline-block;
-    }
-  }
-
-  @include mixin.media-breakpoint-down(xs) {
-    a {
-      margin-left: 10px;
-      margin-right: 10px;
-      &:last-child:after {
-        display: none;
-      }
-
-      &:after {
-        left: auto;
-        right: -10px;
-      }
-    }
-  }
-
-  @include mixin.media-breakpoint-down(lg){
-    margin-bottom: 50px;
-  }
 }
 
 .no-touch .footer-bottom .social-icons__item {
@@ -223,57 +281,3 @@
 
 // -----------------------------------------------------------------------------
 // -----------------------------------------------------------------------------
-
-// =================================
-// === *Footer Form ===============
-// =================================
-.footer {
-  .form-control:focus,
-  .form-control {
-    height: 56px;
-    outline: none;
-    border: none;
-    border-radius: 0;
-    background-color: var.$grey;
-    color: var.$white;
-    box-shadow: none;
-    padding: 17px 19px;
-  }
-
-  .form-control::-webkit-input-placeholder {
-    /* Chrome/Opera/Safari */
-    color: rgba(var.$white, 0.5);
-  }
-
-  .form-control::-moz-placeholder {
-    /* Firefox 19+ */
-    color: rgba(var.$white, 0.5);
-  }
-
-  .form-control:-ms-input-placeholder {
-    /* IE 10+ */
-    color: rgba(var.$white, 0.5);
-  }
-
-  .form-control:-moz-placeholder {
-    /* Firefox 18- */
-    color: rgba(var.$white, 0.5);
-  }
-
-  .btn-primary {
-    border: 4px solid var.$white;
-    font-size: 16px;
-    height: 61px;
-    margin-top: 34px;
-    width: 100%;
-    font-weight: var.$font-weight-bolder;
-    letter-spacing: 0.2px;
-    -webkit-font-smoothing: antialiased;
-    text-transform: uppercase;
-    background-color: var.$blacklight;
-  }
-
-  .btn-primary:hover {
-    background-color: var.$gray-900;
-  }
-}
