[TASK] update footer CE according to requested changes

--- a/theme/src/styles/content-elements/footer/_index.scss
+++ b/theme/src/styles/content-elements/footer/_index.scss
@@ -24,7 +24,7 @@
 // === Footer  =====================
 // =================================
 .footer {
-  background: var.$blacklight;
+  background: var.$gray-900;
   padding: 140px 0 60px;
   font-family: var.$font-family-sans-serif;
   font-weight: var.$font-weight-medium;
@@ -32,18 +32,6 @@
   color: var.$white;
   -webkit-font-smoothing: antialiased;
   text-transform: uppercase;
-
-  & h1,
-  & h2,
-  & h3,
-  & h4,
-  & h5,
-  & h6 {
-    color: var.$white;
-    font-weight: var.$font-weight-bolder;
-    letter-spacing: 0.2px;
-    -webkit-font-smoothing: antialiased;
-  }
 
   & a {
     transition: color 0.2s ease;
@@ -59,207 +47,213 @@
   @include mixin.media-breakpoint-down(md) {
     text-align: center;
   }
+}
 
-  &__header {
-    font-size: 14px;
-    text-transform: uppercase;
-  }
-  // -----------------------------------------------------------------------------
-  // -----------------------------------------------------------------------------
+.footer__header {
+  color: var.$white;
+  font-weight: var.$font-weight-bolder;
+  letter-spacing: 0.2px;
+  -webkit-font-smoothing: antialiased;
+  font-size: 14px;
+  text-transform: uppercase;
+}
 
-  // =================================
-  // === Footer Middle ===============
-  // =================================
-  &__middle {
-    border-bottom: 1px solid rgba(var.$white, 0.1);
-    margin-bottom: 40px;
+// -----------------------------------------------------------------------------
+// -----------------------------------------------------------------------------
 
-    &-column {
-      @include mixin.media-breakpoint-down(md) {
-        margin-bottom: 67px;
-      }
+// =================================
+// === Footer Middle ===============
+// =================================
+.footer__middle {
+  border-bottom: 1px solid rgba(var.$white, 0.1);
+  margin-bottom: 40px;
 
-      @include mixin.media-breakpoint-between(sm, lg) {
-        &:nth-child(1),
-        &:nth-child(2) {
-          margin-bottom: 120px;
-        }
-      }
-    }
-
-    @include mixin.media-breakpoint-up(lg) {
-      margin-bottom: 50px;
-      padding-bottom: 83px;
-    }
-
-    & p {
-      line-height: 30px;
-      margin-bottom: 0;
-
-      @include mixin.media-breakpoint-down(md) {
-        line-height: 50px;
-        margin-bottom: 0;
-      }
-    }
+  @include mixin.media-breakpoint-up(lg) {
+    margin-bottom: 50px;
+    padding-bottom: 83px;
   }
 
-  // === Footer Logo===========
-  // =================================
-
-  &__logo {
-    margin-bottom: 34px;
-
-    &-image {
-      max-width: 175px;
-    }
-  }
-
-  // === Footer Links===========
-  // =================================
-  &__links {
-    &-list {
-      list-style: none;
-      padding-left: 0;
-    }
-
-    &-item {
-      line-height: 50px;
-    }
-  }
-  // -----------------------------------------------------------------------------
-  // -----------------------------------------------------------------------------
-
-  // === *Footer Form ===============
-  // =================================
-  &__form-input:focus,
-  &__form-input {
-    height: 56px;
-    outline: none;
-    border: none;
-    border-radius: 0;
-    background-color: rgba(var.$grey, 0.5);
-    color: var.$white;
-    box-shadow: none;
-    padding: 17px 19px;
-  }
-
-  &__form-input::-webkit-input-placeholder {
-    /* Chrome/Opera/Safari */
-    color: rgba(var.$white, 0.5);
-  }
-
-  &__form-input::-moz-placeholder {
-    /* Firefox 19+ */
-    color: rgba(var.$white, 0.5);
-  }
-
-  &__form-input:-ms-input-placeholder {
-    /* IE 10+ */
-    color: rgba(var.$white, 0.5);
-  }
-
-  &__form-input:-moz-placeholder {
-    /* Firefox 18- */
-    color: rgba(var.$white, 0.5);
-  }
-
-  &__btn {
-    border: 4px solid var.$white;
-    font-size: 16px;
-    height: 61px;
-    margin-top: 34px;
-    width: 100%;
-    font-weight: var.$font-weight-bolder;
-    letter-spacing: 0.2px;
-    -webkit-font-smoothing: antialiased;
-    text-transform: uppercase;
-    background-color: var.$blacklight;
-
-    &:hover {
-      background-color: var.$gray-900;
-    }
-  }
-  // -----------------------------------------------------------------------------
-  // -----------------------------------------------------------------------------
-  // === Footer Social Links ===============
-  // =================================
-  &__social-list {
-    @include mixin.media-breakpoint-up(lg) {
-      .social-icons {
-        padding: 0;
-        text-align: right;
-        flex-direction: column;
-      }
-    }
-  }
-
-  &__social__item {
-    color: var.$white;
-    margin-left: 50px;
-
-    &:first-child {
-      margin-left: 0;
-    }
-  }
-
-  // === Footer Bottom ===============
-  // =================================
-  &__bottom {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  & p {
+    line-height: 30px;
+    margin-bottom: 0;
 
     @include mixin.media-breakpoint-down(md) {
-      flex-direction: column;
-    }
-
-    &-wrap {
-      display: flex;
-
-      @include mixin.media-breakpoint-down(md) {
-        margin-bottom: 50px;
-      }
-      @include mixin.media-breakpoint-down(sm) {
-        flex-wrap: wrap;
-      }
-    }
-
-    &-links {
+      line-height: 50px;
       margin-bottom: 0;
-      @include mixin.media-breakpoint-down(sm) {
-        width: 100%;
-      }
     }
+  }
+}
 
-    &-copyright {
-      line-height: unset;
-      margin-bottom: 0;
-      @include mixin.media-breakpoint-down(sm) {
-        width: 100%;
-        margin-bottom: 10px;
-      }
+.footer__middle-column {
+  @include mixin.media-breakpoint-down(md) {
+    margin-bottom: 67px;
+  }
+
+  @include mixin.media-breakpoint-between(sm, lg) {
+    &:nth-child(1),
+    &:nth-child(2) {
+      margin-bottom: 120px;
     }
+  }
+}
 
-    &-item {
-      margin-left: 20px;
-      position: relative;
-      line-height: unset;
-      display: inline-block;
-      &:after {
-        content: "";
-        background-color: #fff;
-        width: 1px;
-        height: 12px;
-        position: absolute;
-        top: 4px;
-        left: -11px;
-      }
-      @include mixin.media-breakpoint-down(sm) {
-        margin: 0 10px 10px;
-        &:first-child:after {
-          display: none;
-        }
-      }
+// === Footer Logo===========
+// =================================
+
+.footer__logo {
+  margin-bottom: 34px;
+}
+
+.footer__logo-image {
+  max-width: 175px;
+}
+
+// === Footer Links===========
+// =================================
+.footer__links-list {
+  list-style: none;
+  padding-left: 0;
+}
+
+.footer__links-item {
+  line-height: 50px;
+}
+// -----------------------------------------------------------------------------
+// -----------------------------------------------------------------------------
+
+// === *Footer Form ===============
+// =================================
+// .footer__form-input,
+// .footer__form-input:focus {
+//   height: 56px;
+//   outline: none;
+//   border: none;
+//   border-radius: 0;
+//   background-color: rgba(var.$gray-600, 0.5);
+//   color: var.$white;
+//   box-shadow: none;
+//   padding: 17px 19px;
+// }
+
+.footer__form-input {
+  height: 56px;
+  outline: none;
+  border: none;
+  border-radius: 0;
+  background-color: rgba(var.$gray-600, 0.5);
+  color: var.$white;
+  box-shadow: none;
+  padding: 17px 19px;
+
+  &::-webkit-input-placeholder,
+  &::-moz-placeholder,
+  &:-ms-input-placeholder,
+  &:-moz-placeholder {
+    color: rgba(var.$white, 0.5);
+  }
+
+  &:focus {
+    outline: none;
+    border: none;
+    background-color: rgba(var.$gray-600, 0.5);
+    color: var.$white;
+    box-shadow: none;
+  }
+}
+
+.footer__btn {
+  border: 4px solid var.$white;
+  font-size: 16px;
+  height: 61px;
+  margin-top: 34px;
+  width: 100%;
+  font-weight: var.$font-weight-bolder;
+  letter-spacing: 0.2px;
+  -webkit-font-smoothing: antialiased;
+  text-transform: uppercase;
+  background-color: var.$gray-900;
+
+  &:hover {
+    background-color: var.$gray-800;
+  }
+}
+// -----------------------------------------------------------------------------
+// -----------------------------------------------------------------------------
+// === Footer Social Links ===============
+// =================================
+
+.footer__social__item {
+  color: var.$white;
+  margin-left: 50px;
+
+  &:first-child {
+    margin-left: 0;
+  }
+}
+
+// === Footer Bottom ===============
+// =================================
+.footer__bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @include mixin.media-breakpoint-down(md) {
+    flex-direction: column;
+  }
+}
+
+.footer__bottom-wrap {
+  display: flex;
+
+  @include mixin.media-breakpoint-down(md) {
+    margin-bottom: 50px;
+  }
+
+  @include mixin.media-breakpoint-down(sm) {
+    flex-wrap: wrap;
+  }
+}
+
+.footer__bottom-links {
+  margin-bottom: 0;
+
+  @include mixin.media-breakpoint-down(sm) {
+    width: 100%;
+  }
+}
+
+.footer__bottom-copyright {
+  line-height: unset;
+  margin-bottom: 0;
+
+  @include mixin.media-breakpoint-down(sm) {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
+
+.footer__bottom-item {
+  margin-left: 20px;
+  position: relative;
+  line-height: unset;
+  display: inline-block;
+
+  &:after {
+    content: "";
+    background-color: #fff;
+    width: 1px;
+    height: 12px;
+    position: absolute;
+    top: 4px;
+    left: -11px;
+  }
+
+  @include mixin.media-breakpoint-down(sm) {
+    margin: 0 10px 10px;
+
+    &:first-child:after {
+      display: none;
     }
   }
 }
