--- a/theme/src/styles/_variables.scss
+++ b/theme/src/styles/_variables.scss
@@ -8,10 +8,10 @@ $gray-200: #e9ecef;
 $gray-300: #dee2e6;
 $gray-400: #ced4da;
 $gray-500: #adb5bd;
-$gray-600: #6c757d;
+$gray-600: #707070;
 $gray-700: #495057;
 $gray-800: #343a40;
-$gray-900: #212529;
+$gray-900: #1d1d1d;
 $black:    #000;
 
 $blue:    #007bff !default;
