[TASK] update page layputs, colPos configs for diff columns

--- a/Resources/Private/Templates/Page/3columns.html
+++ b/Resources/Private/Templates/Page/3columns.html
@@ -3,19 +3,33 @@
 <f:layout name="Default" />
 
 <f:comment>
-  # Columns pattern
+  <!-- Add additional page-specific JS and CSS assets if needed -->
+  <f:render partial="Css/Plugin1" arguments="{_all}" />
+  <f:render partial="Js/Plugin1" arguments="{_all}" />
+  <f:render partial="Js/Plugin2" arguments="{_all}" />
+</f:comment>
+
+<f:comment>
+  # Columns pattern [colPos]
   # [1-10]     -> Header
   # [11-20]    -> Footer
   # [30-40]    -> Navigation/Breadcrumbs
   # [50-90]    -> Additional content
   # __________________________
-  # 100-900 -> All Content
+  # 1000-10000 -> All Content
   # ***
-  # [100-199]  -> 100% column width (e.g., one column layout)
-  # [500-599]  -> 50% column width (e.g., two columns layout)
-  # [300-399]  -> 33% column width (e.g., three columns layout)
-  # [200-299]  -> 25% column width  (e.g., four columns layout)
-  # [700-799]  -> 75% column width
+  # colPos = [1000-1099]  -> 100% column width [col-md-12] (e.g., one column layout)
+  # colPos = [9100-9199]  -> 91% column width [col-md-11] (e.g., two columns layout [91%/8%])
+  # colPos = [8300-8399]  -> 83% column width [col-md-10] (e.g., two columns layout [83%/16%])
+  # colPos = [7500-7599]  -> 75% column width [col-md-9] (e.g., two columns layout [75%/25%])
+  # colPos = [6600-6699]  -> 66% column width [col-md-8] (e.g., two columns layout [66%/33%])
+  # colPos = [5800-5899]  -> 58% column width [col-md-7] (e.g., two columns layout [58%/41%])
+  # colPos = [5000-5099]  -> 50% column width [col-md-6] (e.g., two equal columns layout)
+  # colPos = [4100-4199]  -> 41% column width [col-md-5] (e.g., two columns layout [41%/58%])
+  # colPos = [3300-3399]  -> 33% column width [col-md-4] (e.g., three equal columns layout)
+  # colPos = [2500-2599]  -> 25% column width [col-md-3] (e.g., four equal columns layout)
+  # colPos = [1600-1699]  -> 16% column width [col-md-2] (e.g., six equal columns layout)
+  # colPos = [800-899]    -> 8% column width [col-md-1] (e.g., twelve equal columns layout)
   # __________________________
 </f:comment>
 
@@ -27,9 +41,9 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:301}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:302}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:303}" />
+  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3301}" />
+  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3302}" />
+  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3303}" />
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
 
